--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -1,9 +1,9 @@
-name: Build and Deploy to Cloud Run (Docker)
+name: Build and Deploy to Cloud Run
 
 on:
   push:
     branches:
-      - main # or your deployment branch
+      - main
 
 jobs:
   build-and-deploy:
@@ -18,19 +18,21 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Configure Docker for gcloud
-        run: gcloud auth configure-docker
+      - name: Configure Docker for Artifact Registry
+        run: |-
+          gcloud auth configure-docker ${{ env.GCP_REGION }}-docker.pkg.dev
 
       - name: Build Docker image
-        run: |
-          docker build -t europe-west6-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/$GITHUB_REPOSITORY:$GITHUB_SHA .
+        run: |-
+          docker build -t ${{ env.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/cloud-run/$GITHUB_REPOSITORY:$GITHUB_SHA .
 
-      - name: Push Docker image
-        run: |
-          docker push europe-west6-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/$GITHUB_REPOSITORY:$GITHUB_SHA
+      - name: Push Docker image to Artifact Registry
+        run: |-
+          docker push ${{ env.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/cloud-run/$GITHUB_REPOSITORY:$GITHUB_SHA
 
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v2
         with:
-          service: ${{ secrets.GCP_CLOUD_RUN_SERVICE }}
-          image: europe-west6-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/$GITHUB_REPOSITORY:$GITHUB_SHA
+          service: ${{ secrets.CLOUD_RUN_SERVICE }}
+          image: ${{ env.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/cloud-run/$GITHUB_REPOSITORY:$GITHUB_SHA
+          region: ${{ env.GCP_REGION }}
