--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -35,3 +35,4 @@ jobs:
         with:
           service: ${{ secrets.GCP_CLOUD_RUN_SERVICE }}
           image: ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/cloud-run/${{ github.repository }}:${{ github.sha }}
+          REGION: ${{ secrets.GCP_REGION }}
