--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
 dnspython==2.7.0
+docker-pycreds==0.4.0
 email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
+filelock==3.18.0
+fsspec==2025.3.2
+gitdb==4.0.12
+GitPython==3.1.44
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -15,21 +21,35 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.4.2
+platformdirs==4.3.7
+protobuf==6.30.2
+psutil==7.0.0
 pydantic==2.11.4
 pydantic_core==2.33.2
 Pygments==2.19.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.3
 rich==14.0.0
 rich-toolkit==0.14.4
+sentry-sdk==2.27.0
+setproctitle==1.3.6
 shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 starlette==0.46.2
+sympy==1.14.0
+torch==2.7.0
 typer==0.15.3
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+urllib3==2.4.0
 uvicorn==0.34.2
 uvloop==0.21.0
+wandb==0.19.10
 watchfiles==1.0.5
 websockets==15.0.1
