--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.4.2
+numpy==2.2.5
+pillow==11.2.1
 platformdirs==4.3.7
 protobuf==6.30.2
 psutil==7.0.0
@@ -44,6 +46,7 @@ sniffio==1.3.1
 starlette==0.46.2
 sympy==1.14.0
 torch==2.7.0
+torchvision==0.22.0
 typer==0.15.3
 typing-inspection==0.4.0
 typing_extensions==4.13.2
