--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Build Docker image
         run: |-
-          docker build --build-arg WANDB_ARTIFACT_NAME="${{ github.event.client_payload.wandb_artifact_name }}" -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/cloud-run/$GITHUB_REPOSITORY:$GITHUB_SHA .
+          docker build --build-arg WANDB_ARTIFACT_NAME="${{ github.event.client_payload.wandb_artifact_name }}" --build-arg WANDB_API_KEY="${{ secrets.WANDB_API_KEY }}" -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/cloud-run/$GITHUB_REPOSITORY:$GITHUB_SHA .
 
       - name: Push Docker image to Artifact Registry
         run: |-
